chore: fix font-size, spacing

--- a/src/components/command-bar/commands/search/components/no-results-message/no-results-message.module.css
+++ b/src/components/command-bar/commands/search/components/no-results-message/no-results-message.module.css
@@ -9,9 +9,13 @@
 	color: var(--token-color-foreground-primary);
 }
 
+.checkOtherTabs {
+	margin-top: 2px;
+}
+
 .otherTab {
 	font-weight: var(--token-typography-font-weight-medium);
-	margin: 0 0.25em;
+	margin: 0 0.2em;
 }
 
 .otherTabIcon {
